# sandbox-vtk-python

./: .gitignore  AGENTS.md  AI_HANDOFF.md  CMakePresets.json  README.md  pyproject.toml
constraints/: py310.txt  py312.txt
docs/: architecture.md  build-flow.md  code-documentation-style.md  desired-repository-layout.md  environment-hygiene.md  existing-linux-workflow.md  objectives-and-non-goals.md  platform-matrix.md  problem-statement.md  python-first-dev-env.md  runtime-model.md  validation-matrix.md  windows-from-scratch.md
docs/ai-coding-history/: 00-ChatGPT demande de prompt Codex.md  01-INITIAL_CODEX_PROMPT.md
docs/archive/: 02-INITIAL_PLAN_BY_CODEX.md  03-commandes-executées.md
docs/decisions/: 0001-vtk-sdk-vs-python-runtime.md
docs/legacy/: README.md  open-questions.md
docs/legacy/ai-coding-history/: 00-create_repo_skeleton.ps1  README.md  (+1 more)
examples/: README.md  import_both.py  show_runtime.py
scripts/: bootstrap-dev-env.py
scripts/ubuntu/: build-vtk.sh  enter-clean-dev-shell.sh  sync-venv.sh
scripts/validate/: audit-environment.py  import-order.py  runtime-provenance.py
scripts/windows/: build-vtk.ps1  enter-clean-dev-shell.ps1  fetch-vtk-source.cmd  fetch-vtk-source.ps1  sync-venv.ps1  vsdev.cmd  vsdev.ps1
tests/: README.md  test_audit_environment.py  test_bootstrap_dev_env.py  test_codecpp_runtime.py  test_pmanager.py  test_pmanager_build.py  test_pmanager_environment.py  test_pmanager_fetch.py  test_pmanager_process.py  test_pmanager_sync.py  test_pmanager_validation_modules.py  test_pmanager_workflow.py  test_runtime_provenance.py
(+2 files in other folders)
